--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   qr_flutter: ^4.1.0
+  camera: ^0.10.5+9
+  mobile_scanner: ^2.1.0
 
 dev_dependencies:
   flutter_test:
