--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   qr_flutter: ^4.1.0
   camera: ^0.10.5+9
   mobile_scanner: ^2.1.0
+  http: ^1.2.1
 
 dev_dependencies:
   flutter_test:
